2012-05-11  Guillaume Lazzara  <z@lrde.epita.fr>

	* NEWS: Start populating the changes list.

2011-11-25  Roland Levillain  <roland@lrde.epita.fr>

	Update lrde-scmstats.sh.

	* lrde-scmstats.sh: Look more like lrde-upload.sh.
	Ensure generated data is readable from the Web.
	Anonymize some names as requested by some contributors.

2011-11-24  Guillaume Lazzara  <z@lrde.epita.fr>

	* distrib/macports/Portfile.in: Fix maintainers field.

2011-11-24  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-scmstats.sh: Fix branch name ambiguities.

2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-scmstats.sh: Compute stats per branches.

2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-upload.sh: Update list of branches.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	* README (Bibliography): Mention the GRETSI 2011 paper.

2011-11-16  Guillaume Lazzara  <z@lrde.epita.fr>

	* m4/oln-with-lib.m4: Lookup for multiple AND single libraries
	while checking Tesseract availability.

2011-09-16  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac, NEWS: Version 2.0a.

2011-09-16  Guillaume Lazzara  <z@lrde.epita.fr>

	Olena 2.0

	* NEWS: Add release date.

	* configure.ac: Change version number.

2011-09-16  Guillaume Lazzara  <z@lrde.epita.fr>

	* README: Add descriptions for Scribo.

2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Prepare the forthcoming release.

	* AUTHORS: Update.
	* NEWS: Update.
	Aesthetic changes.
	* README: Update documentation with respect to ImageMagick and
	GraphicsMagick.

2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Fix the initialization of Magick++ flags.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	* distrib/macports/Portfile.in: Force the use of GraphicsMagick.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	* bootstrap: Fix minimum required version for convert.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Handle both GraphicsMagick and ImageMagick.
